# flywheels

./: 404.html  CHANGELOG.md  CHANGELOG.md.jinja  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: release.yml  test.yml
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  index.md  license.md
docs/assets/: .gitkeep
flywheels/: __init__.py  __main__.py  app.py  request.py
license/: index.html
search/: search_index.json
tests/: __init__.py  test_sth.py
